@@ -21,6 +21,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -30,58 +31,53 @@ public class SecurityConfig {
     private final OidcAuthenticationSuccessHandler oidcAuthenticationSuccessHandler;
     private final OidcAuthenticationFailureHandler oidcAuthenticationFailureHandler;
     private final JwtTokenProvider jwtTokenProvider;
-    
+
     @Value("${react.host}")
-    private String reactHost; // React 앱의 호스트 주소
-    
+    private String reactHost;
+
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .csrf(AbstractHttpConfigurer::disable) // CSRF 비활성화
-                .httpBasic(AbstractHttpConfigurer::disable) // HTTP Basic 인증 비활성화
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // CORS 설정
+                .csrf(AbstractHttpConfigurer::disable)
+                .httpBasic(AbstractHttpConfigurer::disable)
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .exceptionHandling(exceptions -> exceptions
                         .authenticationEntryPoint((request, response, authException) -> {
-                            // 미인증 상태에서 401 응답 반환
                             response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
                             response.setContentType("application/json");
                             response.getWriter().write("{\"error\":\"Unauthorized\",\"message\":\"Authentication required\"}");
                         }))
-                // HTTP 요청에 대한 인가 규칙 설정
                 .authorizeHttpRequests(authorizeRequests -> authorizeRequests
-                        .requestMatchers("/auth/refresh", "/oauth2/**", "/actuator/*", "/error", "/test").permitAll() // OAuth2 로그인 과정 및 일부 정적 리소스 허용
-                        .requestMatchers("/public/**").permitAll() // 공개 API 경로
-                        .requestMatchers("/api/user/**").hasRole("USER") // USER 역할이 있는 사용자만 접근 가능 (역할 기반 접근 제어 예시)
-                        .anyRequest().authenticated() // 그 외 모든 요청은 인증 필요
+                        .requestMatchers("/api/auth/refresh", "/auth/refresh", "/oauth2/**", "/error", "/favicon.ico", "/test",
+                                "/api/news/**", "/api/coin/**", "/api/public/**", "/public/**", "/auth/logout",
+                                "/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html", "/actuator/*").permitAll()
+                        .requestMatchers("/api/user/**").hasRole("USER")
+                        .anyRequest().authenticated()
                 )
-                // OAuth2/OIDC 로그인 설정
                 .oauth2Login(oauth2Login -> oauth2Login
                         .userInfoEndpoint(userInfoEndpoint ->
-                                userInfoEndpoint.oidcUserService(customOidcUserService) // CustomOidcUserService 사용
+                                userInfoEndpoint.oidcUserService(customOidcUserService)
                         )
-                        // 로그인 성공 시 JWT 발급 및 리액트 앱으로 리다이렉트하는 핸들러 설정
                         .successHandler(oidcAuthenticationSuccessHandler)
-                        .failureHandler(oidcAuthenticationFailureHandler) // 로그인 실패 시 핸들러 설정
+                        .failureHandler(oidcAuthenticationFailureHandler)
                 )
-                // JWT 사용 시 세션을 사용하지 않도록 설정
                 .sessionManagement(session -> session
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 )
                 .addFilterBefore(new JwtAuthenticationFilter(jwtTokenProvider),
                         UsernamePasswordAuthenticationFilter.class);
-        
+
         return http.build();
     }
-    
-    // CORS 설정
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(reactHost)); // React 앱의 호스트 주소
+        configuration.setAllowedOrigins(Arrays.asList(reactHost, "http://localhost:5173"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
